Configured the webpack.config.js and installed a few more tools (bootstrap, css-loader and style-loader) to use bootstrap. Added in the necessary imports for bootstrap onto index.js (entry point for webpack).

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,25 @@
     <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-
+    <!-- Content Section -->
     <div class="container">
         <h1>Hello There!</h1>
-        <p>To get started, edit <code>src/index.js</code>.</p>
+        <div class="row">
+
+            <!-- Subtitle/Loading Section -->
+            <div class="col">
+                <h3></h3>
+            </div>
+            <!-- Subtitle/Loading Section End -->
+
+            <!-- Movies Section -->
+            <div class="col">
+                <p>To get started, edit <code>src/index.js</code>.</p>
+            </div>
+            <!-- Movies Section End -->
+        </div>
     </div>
+    <!-- Content Section End -->
 
     <script src="./main.js"></script>
 </body>
