--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Content Section -->
-    <div class="container">
+    <div class="container-fluid">
         <h1>Hello There!</h1>
         <div class="row">
 
@@ -19,10 +19,7 @@
                         <a class="nav-link active" id="create-tab" data-toggle="tab" href="#create" role="tab" aria-controls="create" aria-selected="true">Add Movie</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+                        <a class="nav-link" id="edit-tab" data-toggle="tab" href="#edit" role="tab" aria-controls="edit" aria-selected="false">Edit</a>
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
@@ -30,12 +27,12 @@
                         <!-- Add/Create Form -->
                         <form id="form-create">
                             <div class="form-group">
-                                <label for="movieTitle">Movie Title</label>
-                                <input type="text" class="form-control" id="movieTitle" placeholder="e.g. Sausage Party">
+                                <label for="movieTitleAdd">Movie Title</label>
+                                <input type="text" class="form-control" id="movieTitleAdd" placeholder="e.g. Sausage Party">
                             </div>
                             <div class="form-group">
-                                <label for="movieRating">Rating</label>
-                                <select class="form-control" id="movieRating">
+                                <label for="movieRatingAdd">Rating</label>
+                                <select class="form-control" id="movieRatingAdd">
                                     <option>1</option>
                                     <option>2</option>
                                     <option>3</option>
@@ -49,8 +46,29 @@
                         </form>
                         <!-- Add/Create Form -->
                     </div>
-                    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
-                    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+                    <div class="tab-pane fade" id="edit" role="tabpanel" aria-labelledby="edit-tab">
+                        <!-- Edit/Delete Form -->
+                        <form id="form-edit">
+                            <div class="form-group">
+                                <label for="movieTitleEdit">Movie Title</label>
+                                <input type="text" class="form-control" id="movieTitleEdit" placeholder="e.g. Sausage Party">
+                            </div>
+                            <div class="form-group">
+                                <label for="movieRatingEdit">Rating</label>
+                                <select class="form-control" id="movieRatingEdit">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                </select>
+                            </div>
+                            <div class="d-flex">
+                                <button class="btn btn btn-primary ml-auto px-4" type="submit">Edit</button>
+                            </div>
+                        </form>
+                        <!-- Edit/Delete Form End-->
+                    </div>
                 </div>
 
             <!-- Forms Section End -->
@@ -59,8 +77,7 @@
 
             <!-- Movies Section -->
             <div class="col">
-                <h3></h3>
-                <p></p>
+                <div class="overflow-auto" id="movieList"></div>
             </div>
             <!-- Movies Section End -->
         </div>
