Added in the edit feature and can edit/modify a movie within db.json, but may need to add in a few additional default features for the edit tab section. Still need to add in the delete feature and eventually work on fixing up the design layout.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div class="row">
 
             <!-- Subtitle/Loading Section -->
-            <div class="col">
+            <div class="col-4">
             <!-- Forms Section -->
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
@@ -76,7 +76,7 @@
             <!-- Subtitle/Loading Section End -->
 
             <!-- Movies Section -->
-            <div class="col">
+            <div class="col-8">
                 <div class="overflow-auto" id="movieList"></div>
             </div>
             <!-- Movies Section End -->
