--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>My Application</title>
     <link rel="stylesheet" href="/style.css" />
+<!--    <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
 </head>
 <body>
     <!-- Content Section -->
@@ -83,7 +84,7 @@
         </div>
     </div>
     <!-- Content Section End -->
-
+<!--    <script src=“https://kit.fontawesome.com/97dc1343e3.js” crossorigin=“anonymous”></script>-->
     <script src="./main.js"></script>
 </body>
 </html>
