Minor format changes. Changed H1 and Label elements

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <!-- Content Section -->
-    <div class="container-fluid">
-        <h1>Hello There!</h1>
+    <div class="container-fluid mt-5 mb-3">
+        <h1>The Movie List</h1>
         <div class="row">
 
             <!-- Subtitle/Loading Section -->
@@ -51,7 +51,7 @@
                         <form id="form-edit">
                             <div class="form-group">
                                 <label for="movieTitleEdit">Movie Title</label>
-                                <input type="text" class="form-control" id="movieTitleEdit" placeholder="e.g. Sausage Party">
+                                <input type="text" class="form-control" id="movieTitleEdit" placeholder="Select Movie From List">
                             </div>
                             <div class="form-group">
                                 <label for="movieRatingEdit">Rating</label>
@@ -76,7 +76,7 @@
 
             <!-- Movies Section -->
             <div class="col-8">
-                <div class="overflow-auto" id="movieList"></div>
+                <div class="overflow-auto mx-auto" id="movieList"></div>
             </div>
             <!-- Movies Section End -->
         </div>
